// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an svg, g, path 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 111.11111111111111,
      "width": 100,
    }
  }
>
  <ARTGroup
    opacity={1}
    transform="e66c56023a2e4b857683d66b5bc5d146"
  >
    <ARTGroup
      opacity={1}
      transform="e4c138e0ae717832b3b923e468af04e5"
    >
      <ARTShape
        d="343185e9878751b0e59aeee3debd5e87"
        fill={
          Array [
            0,
            0,
            0,
            0,
            1,
          ]
        }
        opacity={1}
        strokeCap={1}
        strokeJoin={1}
        strokeWidth={1}
        transform="e4c138e0ae717832b3b923e468af04e5"
      />
    </ARTGroup>
  </ARTGroup>
</ARTSurfaceView>
`;

exports[`2. a path with no fill 1`] = `
<ARTShape
  d="343185e9878751b0e59aeee3debd5e87"
  opacity={1}
  strokeCap={1}
  strokeJoin={1}
  strokeWidth={1}
  transform="e4c138e0ae717832b3b923e468af04e5"
/>
`;

exports[`3. a polygon 1`] = `
<ARTShape
  d="f2fe184e88869d0ef2eb25afbc19b807"
  fill={
    Array [
      0,
      0,
      0,
      1,
      1,
    ]
  }
  opacity={1}
  stroke={
    Array [
      1,
      0,
      0,
      1,
    ]
  }
  strokeCap={1}
  strokeJoin={1}
  strokeWidth={1}
  transform="e4c138e0ae717832b3b923e468af04e5"
/>
`;

exports[`4. a rect 1`] = `
<ARTShape
  d="db81aee2682fc4fbf84207fe820554da"
  fill={
    Array [
      0,
      0,
      0,
      0,
      1,
    ]
  }
  opacity={0.4}
  stroke={
    Array [
      1,
      1,
      1,
      1,
    ]
  }
  strokeCap={1}
  strokeJoin={1}
  strokeWidth={8}
  transform="e4c138e0ae717832b3b923e468af04e5"
/>
`;
